<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="5dp"
    app:strokeColor="@color/purple_700"
    app:strokeWidth="1dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/uquv_meyoriy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:fontFamily="@font/raleway_regular"
            android:text="@string/o_quv_meyoriy_hujjatlar"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/sub_menu_items"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:visibility="gone"
            tools:ignore="RtlSymmetry">

            <TextView
                android:id="@+id/kidt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginHorizontal="10dp"
                android:fontFamily="@font/raleway_regular"
                android:text="@string/kidt"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/att"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginHorizontal="10dp"
                android:fontFamily="@font/raleway_regular"
                android:text="@string/att"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/namunaviy_dastur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginHorizontal="10dp"
                android:fontFamily="@font/raleway_regular"
                android:text="@string/namunaviy_dastur"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/ishchi_dastur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginHorizontal="10dp"
                android:fontFamily="@font/raleway_regular"
                android:text="@string/ishchi_dastur"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/inactive_button" />

        <TextView
            android:id="@+id/fan_haqida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:fontFamily="@font/raleway_regular"
            android:text="@string/fan_haqida_ma_lumot"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/inactive_button" />

        <TextView
            android:id="@+id/muallif_haqida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:fontFamily="@font/raleway_regular"
            android:text="@string/muallif_haqida"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/inactive_button" />

        <TextView
            android:id="@+id/crossword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:fontFamily="@font/raleway_regular"
            android:text="@string/crossword"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/inactive_button" />

        <TextView
            android:id="@+id/mustaqil_ta_lim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:fontFamily="@font/raleway_regular"
            android:text="@string/mustaqil_ta_lim"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/inactive_button" />

        <TextView
            android:id="@+id/adabiyotlar_ruyxati"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:fontFamily="@font/raleway_regular"
            android:text="@string/adabiyotlar_ro_yxati"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/inactive_button" />

        <TextView
            android:id="@+id/natijalarim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:fontFamily="@font/raleway_regular"
            android:text="@string/natijalarim"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>