<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    android:orientation="vertical"
    tools:context=".ui.ThemeDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:layout_marginStart="5dp"
            android:padding="12dp"
            app:srcCompat="@drawable/ic_btn_back"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/toolbarName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="20dp"
            android:ellipsize="end"
            android:fontFamily="@font/raleway_bold"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        app:cardCornerRadius="35dp">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/btnMaruza"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:gravity="center_vertical">

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/imageMaruza"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_margin="10dp"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_repeatCount="-1" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:fontFamily="@font/raleway_regular"
                        android:gravity="center_vertical"
                        android:text="@string/ma_ruza"
                        android:textColor="@color/black"
                        android:textSize="28sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btnMuammoli"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:gravity="center_vertical"
                    android:paddingStart="30dp">

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/imageMuammoli"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_margin="10dp"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_repeatCount="-1" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:fontFamily="@font/raleway_regular"
                        android:gravity="center_vertical"
                        android:text="@string/muammoli_misol"
                        android:textColor="@color/black"
                        android:textSize="28sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btnMustaqil"
                    android:layout_width="match_parent"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/imageMustaqil"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_margin="10dp"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_repeatCount="-1" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:fontFamily="@font/raleway_regular"
                        android:gravity="center_vertical"
                        android:text="@string/mustaqil_ishlash"
                        android:textColor="@color/black"
                        android:textSize="28sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btnTaqdimot"
                    android:layout_width="match_parent"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingStart="30dp">

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/imagePresentation"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_margin="10dp"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_repeatCount="-1" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:fontFamily="@font/raleway_regular"
                        android:gravity="center_vertical"
                        android:text="@string/taqdimot"
                        android:textColor="@color/black"
                        android:textSize="28sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btnTest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:gravity="center_vertical">

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/imageTest"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_margin="10dp"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_repeatCount="-1" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:fontFamily="@font/raleway_regular"
                        android:gravity="center_vertical"
                        android:text="@string/test_sinovi"
                        android:textColor="@color/black"
                        android:textSize="28sp" />
                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.cardview.widget.CardView>

</LinearLayout>